--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,16 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Hello City !{% endblock %}
+
 {% block body %}
+<img src="{{ asset('/images/drapeauKebec.png')}}" alt="Quebec Flag" class="mt-12 h-32 rounded shadow-md">
+<h1 class="mt-5 text-3xl sm:text-5xl font-semibold text-indigo-600">Hello from Quebec ! </h1>
 
-<h1>Hello from Quebec ! </h1>
+<p class="text-lg text-gray-800">It's currently {{ 'now'|date('h:i A')}} .</p>
 
-<p>It's currently {{ 'now'|date('h:i A')}} .</p>
-
-
-
-<footer>
-  <p>&copy; Copyright {{ 'now'|date('Y')}} &middot;
-     <a href="#">About Us</a>
-  </p>
-</footer>
 {% endblock %}
