udapte image and text home page

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Hello City !{% endblock %}
 
 {% block body %}
-<img src="{{ asset('/images/drapeauKebec.png')}}" alt="Quebec Flag" class="mt-12 h-32 rounded shadow-md">
-<h1 class="mt-5 text-3xl sm:text-5xl font-semibold text-indigo-600">Hello from Quebec ! </h1>
+<img src="{{ asset('/images/drapeauFrance.png')}}" alt="Quebec Flag" class="mt-12 h-32 rounded shadow-md">
+<h1 class="mt-5 text-3xl sm:text-5xl font-semibold text-indigo-600">Hello from France ! </h1>
 
 <p class="text-lg text-gray-800">It's currently {{ 'now'|date('h:i A')}} .</p>
 
