--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -3,7 +3,7 @@
 {% block title 'About Us | ' ~ parent() %}
 
 {% block body %}
-<img src="{{ asset('/images/dessin-1.svg')}}"alt="Quebec Flag" width="250" height="250" class="bg-gray-300 rounded-full shadow-md my-12">
+<img src="{{ asset('/images/devnoirOpaque.png')}}"alt="Quebec Flag" width="350" height="350" class="bg-gray-300 rounded-full shadow-md my-12">
 <h1 class="text-gray-700">Built with {#❤ ou #} <span class="text-pink-500">&hearts;</span> by Cindy Ruet.</h1>
 <p class="mt-5"><a href="{{ path('app_home') }}" class="text-indigo-500 hover:text-indigo-600 underline">Revenir à la page d'accueil</a></p>
 {% endblock %}
